--- a/index.html
+++ b/index.html
@@ -44,47 +44,30 @@
 <h2 align="middle">Tinna Liu, Yiwei Zhou</h2>
 
 <!-- Add Website URL -->
-<h2 align="middle">Website URL: <a href="TODO">TODO</a></h2>
+<h2 align="middle">Website URL: <a href="https://ewayz-1.github.io/CS184Proj3-1WebPage/
+    ">https://ewayz-1.github.io/CS184Proj3-1WebPage/
+</a></h2>
 
 <br><br>
 
-
-<div align="center">
-  <table style="width=100%">
-      <tr>
-          <td align="middle">
-          <img src="images/example_image.png" width="480px" />
-          <figcaption align="middle">Results Caption: my bunny is the bounciest bunny</figcaption>
-      </tr>
-  </table>
-</div>
-
-<p>All of the text in your write-up should be <em>in your own words</em>. If you need to add additional HTML features to this document, you can search the <a href="http://www.w3schools.com/">http://www.w3schools.com/</a> website for instructions. To edit the HTML, you can just copy and paste existing chunks and fill in the text and image file names appropriately.</p>
-<o>The website writeup is intended to be a self-contained walkthrough of the assignment: we want this to be a piece of work which showcases your understanding of relevant concepts through both mesh images as well as written explanations about what you did to complete each part of the assignment. Try to be as clear and organized as possible when writing about your own output files or extensions to the assignment. We want to understand what you've achieved and how you've done it!</p> 
-<p>If you are well-versed in web development, feel free to ditch this template and make a better looking page.</p>
-
-
-<p>Here are a few problems students have encountered in the past. Test your website on the instructional machines early!</p>
-<ul>
-<li>Your main report page should be called index.html.</li>
-<li>Be sure to include and turn in all of the other files (such as images) that are linked in your report!</li>
-<li>Use only <em>relative</em> paths to files, such as <pre>"./images/image.jpg"</pre>
-Do <em>NOT</em> use absolute paths, such as <pre>"/Users/student/Desktop/image.jpg"</pre></li>
-<li>Pay close attention to your filename extensions. Remember that on UNIX systems (such as the instructional machines), capitalization matters. <pre>.png != .jpeg != .jpg != .JPG</pre></li>
-<li>Be sure to adjust the permissions on your files so that they are world readable. For more information on this please see this tutorial: <a href="http://www.grymoire.com/Unix/Permissions.html">http://www.grymoire.com/Unix/Permissions.html</a></li>
-<li>And again, test your website on the instructional machines early!</li>
-</ul>
-
-
-<p>Here is an example of how to include a simple formula:</p>
-<p align="middle"><pre align="middle">a^2 + b^2 = c^2</pre></p>
-<p>or, alternatively, you can include an SVG image of a LaTex formula.</p>
 
 <div>
 
 <h2 align="middle">Overview</h2>
 <p>
-    YOUR RESPONSE GOES HERE
+  In part 1, we implemented ray generation and primitive intersection part of the rendering pipeline. Ray generation traces a ray from the view point to a pixel in the senor, hence we can use that ray to get the color for that pixel.
+  Primitive intersection is the foundation of the ray tracing. We implemented triangle and sphere intersection, which take a ray and test if it intersects with a given triangle/sphere in the space within the ray's maximum range.
+  <br><br>
+  In part 2, we implemented BVH (Bounding Volumne Hierarchy). BVH is a algorithm that preprocess the scene, and separates the primitives in the scene into different bounding box. By separating them into differnt bounding box,
+  we can determine if a ray intersects with a group of primitive instead of checking them one by one. This increases our rendering performance significantly.
+  <br><br>
+  In part 3, we implemented the Direct Illumination. We take care of both zero-bounce illumination and one-bounce illumination. Zero-bounce illumination only samples the objects emit itself. One-bounce illumination samples all light that
+  goes direct into a specific point in the scene. With both of them, we can see a scene with every object direct illuminated from the emission. 
+  <br><br>
+  In part 4, we implemented the Global Illumination. Instead of using zero-bounce and one-bounce. We trace the light after hitting a object before it hits the maximum depth we want to trace.
+  This helps the render builds a better quailty and more realistic picture. Since the light can be reflected by the objects in the scene.
+  <br><br>
+  In part 5, we implemented Adaptive Sampling. Adaptive Sampling allows us to sample something that is clear enough compared to a Tolerance. This helps with the performance since we don't have to trace a "noise-free" pixel over and over again.
 </p>
 <br>
 
@@ -298,11 +281,11 @@ Compare the results between uniform hemisphere sampling and lighting sampling in
     <tr align="center">
       <td>
         <img src="images/part3-1.png" align="middle" width="400px"/>
-        <figcaption>CBbunny.dae.dae</figcaption>
+        <figcaption>CBbunny.dae</figcaption>
       </td>
       <td>
         <img src="images/part3-3.png" align="middle" width="400px"/>
-        <figcaption>CBbunny.dae.dae</figcaption>
+        <figcaption>CBbunny.dae</figcaption>
       </td>
     </tr>
     <br>
@@ -330,21 +313,21 @@ Compare the results between uniform hemisphere sampling and lighting sampling in
     <tr align="center">
       <td>
         <img src="images/part3-5.png" align="middle" width="200px"/>
-        <figcaption>1 Light Ray (example1.dae)</figcaption>
+        <figcaption>1 Light Ray (CBbunny.dae)</figcaption>
       </td>
       <td>
         <img src="images/part3-6.png" align="middle" width="200px"/>
-        <figcaption>4 Light Rays (example1.dae)</figcaption>
+        <figcaption>4 Light Rays (CBbunny.dae)</figcaption>
       </td>
     </tr>
     <tr align="center">
       <td>
         <img src="images/part3-7.png" align="middle" width="200px"/>
-        <figcaption>16 Light Rays (example1.dae)</figcaption>
+        <figcaption>16 Light Rays (CBbunny.dae)</figcaption>
       </td>
       <td>
         <img src="images/part3-8.png" align="middle" width="200px"/>
-        <figcaption>64 Light Rays (example1.dae)</figcaption>
+        <figcaption>64 Light Rays (CBbunny.dae)</figcaption>
       </td>
     </tr>
   </table>
@@ -487,7 +470,7 @@ You will probably want to use the instructional machines for the above renders i
 <br>
 <p>
     When max_ray_depth = 0, we can see only self-emitted object has light on the picture. When max_ray_depth = 1, we can the world is illuminated by the light on the previous ray_depth.
-    As max_ray_depth grows, light ray traces more emitted objects from the ray path. In results of a more realistic render and more bright picture.
+    As max_ray_depth grows, light ray traces more emitted objects from the ray path. In results of a more realistic render and brighter picture.
 </p>
 <br>
 
@@ -499,38 +482,38 @@ You will probably want to use the instructional machines for the above renders i
   <table style="width:100%">
     <tr align="center">
       <td>
-        <img src="images/your_file.png" align="middle" width="400px"/>
-        <figcaption>1 sample per pixel (example1.dae)</figcaption>
+        <img src="images/part4-10.png" align="middle" width="400px"/>
+        <figcaption>1 sample per pixel (CBbunny.dae)</figcaption>
       </td>
       <td>
-        <img src="images/your_file.png" align="middle" width="400px"/>
-        <figcaption>2 samples per pixel (example1.dae)</figcaption>
+        <img src="images/part4-11.png" align="middle" width="400px"/>
+        <figcaption>2 samples per pixel (CBbunny.dae)</figcaption>
       </td>
     </tr>
     <tr align="center">
       <td>
-        <img src="images/your_file.png" align="middle" width="400px"/>
-        <figcaption>4 samples per pixel (example1.dae)</figcaption>
+        <img src="images/part4-12.png" align="middle" width="400px"/>
+        <figcaption>4 samples per pixel (CBbunny.dae)</figcaption>
       </td>
       <td>
-        <img src="images/your_file.png" align="middle" width="400px"/>
-        <figcaption>8 samples per pixel (example1.dae)</figcaption>
+        <img src="images/part4-13.png" align="middle" width="400px"/>
+        <figcaption>8 samples per pixel (CBbunny.dae)</figcaption>
       </td>
     </tr>
     <tr align="center">
       <td>
         <img src="images/part4-14.png" align="middle" width="400px"/>
-        <figcaption>16 samples per pixel (example1.dae)</figcaption>
+        <figcaption>16 samples per pixel (CBbunny.dae)</figcaption>
       </td>
       <td>
         <img src="images/part4-15.png" align="middle" width="400px"/>
-        <figcaption>64 samples per pixel (example1.dae)</figcaption>
+        <figcaption>64 samples per pixel (CBbunny.dae)</figcaption>
       </td>
     </tr>
     <tr align="center">
       <td>
-        <img src="images/your_file.png" align="middle" width="400px"/>
-        <figcaption>1024 samples per pixel (example1.dae)</figcaption>
+        <img src="images/part4-2.png" align="middle" width="400px"/>
+        <figcaption>1024 samples per pixel (CBbunny.dae)</figcaption>
       </td>
     </tr>
   </table>
@@ -550,7 +533,18 @@ Pick one scene and render it with at least 2048 samples per pixel. Show a good s
   Explain adaptive sampling. Walk through your implementation of the adaptive sampling.
 </h3>
 <p>
-    YOUR RESPONSE GOES HERE
+  <ul>
+    <li>
+      Adaptive sampling allows us to dynamically deicide how many samples per pixel to take. Dependeding on whether the value 
+      converges, we sample more pixels on more complex areas and sample less pixels on easier areas. 
+    </li>
+    <li>
+      In our implementation, we maintained two float varaibles s1 and s2, which are initialized to 0 before the for loop, and 
+      incremented by illum and illum^2, respectively, in each iteration. Per samplesPerBatch, we calculate the mu and sigma 
+      according to the given formulas, using s1 and s2, and calculate I. If I <= maxTolerence * mu, we break the loop. Finally,
+      we update sampleCountBuffer with the actual count. 
+    </li>
+  </ul>
 </p>
 <br>
 
@@ -562,22 +556,22 @@ Pick one scene and render it with at least 2048 samples per pixel. Show a good s
   <table style="width:100%">
     <tr align="center">
       <td>
-        <img src="images/your_file.png" align="middle" width="400px"/>
-        <figcaption>Rendered image (example1.dae)</figcaption>
+        <img src="images/part5-1.png" align="middle" width="400px"/>
+        <figcaption>Rendered image (CBbunny.dae)</figcaption>
       </td>
       <td>
-        <img src="images/your_file.png" align="middle" width="400px"/>
-        <figcaption>Sample rate image (example1.dae)</figcaption>
+        <img src="images/part5-2.png" align="middle" width="400px"/>
+        <figcaption>Sample rate image (CBbunny.dae)</figcaption>
       </td>
     </tr>
     <tr align="center">
       <td>
-        <img src="images/your_file.png" align="middle" width="400px"/>
-        <figcaption>Rendered image (example2.dae)</figcaption>
+        <img src="images/part5-3.png" align="middle" width="400px"/>
+        <figcaption>Rendered image (CBspheres_lambertian.dae)</figcaption>
       </td>
       <td>
-        <img src="images/your_file.png" align="middle" width="400px"/>
-        <figcaption>Sample rate image (example2.dae)</figcaption>
+        <img src="images/part5-4.png" align="middle" width="400px"/>
+        <figcaption>Sample rate image (CBspheres_lambertian.dae)</figcaption>
       </td>
     </tr>
   </table>
